
[package]
name = "c_transcoder_check_if_all_the_elements_can_be_made_of_same_parity_by_inverting_adjacent_elements_out-rwasm-bolero"
version = "1.0.1"
authors = ["generated-by-rwasm-1.0.1"]
edition = "2018"

[dependencies]
wasi-common = "0.20.0"
wiggle = "0.20.0"


            
[dev-dependencies]
bolero = "0.10.0"