
[package]
name = "c_transcoder_efficiently_find_first_repeated_character_string_without_using_additional_data_structure_one_traversal_out-rwasm-bolero"
version = "1.0.1"
authors = ["generated-by-rwasm-1.0.1"]
edition = "2018"

[dependencies]
wasi-common = "0.20.0"
wiggle = "0.20.0"


            
[dev-dependencies]
bolero = "0.10.0"