
[package]
name = "c_transcoder_find_the_element_before_which_all_the_elements_are_smaller_than_it_and_after_which_all_are_greater_than_it_out-rwasm-original"
version = "1.0.1"
authors = ["generated-by-rwasm-1.0.1"]
edition = "2018"

[dependencies]
wasi-common = "0.20.0"
wiggle = "0.20.0"


            