
[package]
name = "c_transcoder_number_ways_node_make_loop_size_k_undirected_complete_connected_graph_n_nodes_out-rwasm-proptest"
version = "1.0.1"
authors = ["generated-by-rwasm-1.0.1"]
edition = "2018"

[dependencies]
wasi-common = "0.20.0"
wiggle = "0.20.0"


            
[dev-dependencies]
proptest = "1.0.0"