
[package]
name = "c_transcoder_number_which_has_the_maximum_number_of_distinct_prime_factors_in_range_m_to_n_out-rwasm-bolero"
version = "1.0.1"
authors = ["generated-by-rwasm-1.0.1"]
edition = "2018"

[dependencies]
wasi-common = "0.20.0"
wiggle = "0.20.0"


            
[dev-dependencies]
bolero = "0.10.0"