
[package]
name = "cpp_transcoder_count_distinct_non_negative_pairs_x_y_satisfy_inequality_xx_yy_n_2_1_out-rwasm-bolero"
version = "1.0.1"
authors = ["generated-by-rwasm-1.0.1"]
edition = "2018"

[dependencies]
wasi-common = "0.20.0"
wiggle = "0.20.0"


            
[dev-dependencies]
bolero = "0.10.0"