
[package]
name = "cpp_transcoder_count_words_whose_th_letter_either_1_th_th_i1_th_letter_given_word_out-rwasm-bolero"
version = "1.0.1"
authors = ["generated-by-rwasm-1.0.1"]
edition = "2018"

[dependencies]
wasi-common = "0.20.0"
wiggle = "0.20.0"


            
[dev-dependencies]
bolero = "0.10.0"