
[package]
name = "cpp_transcoder_minimum_steps_to_delete_a_string_after_repeated_deletion_of_palindrome_substrings_out-rwasm-bolero"
version = "1.0.1"
authors = ["generated-by-rwasm-1.0.1"]
edition = "2018"

[dependencies]
wasi-common = "0.20.0"
wiggle = "0.20.0"


            
[dev-dependencies]
bolero = "0.10.0"