
[package]
name = "cpp_transcoder_minimum_sum_subsequence_least_one_every_four_consecutive_elements_picked_out-rwasm-bolero"
version = "1.0.1"
authors = ["generated-by-rwasm-1.0.1"]
edition = "2018"

[dependencies]
wasi-common = "0.20.0"
wiggle = "0.20.0"


            
[dev-dependencies]
bolero = "0.10.0"