
[package]
name = "cpp_transcoder_minimum_time_write_characters_using_insert_delete_copy_operation_out-rwasm-proptest"
version = "1.0.1"
authors = ["generated-by-rwasm-1.0.1"]
edition = "2018"

[dependencies]
wasi-common = "0.20.0"
wiggle = "0.20.0"


            
[dev-dependencies]
proptest = "1.0.0"