
[package]
name = "cpp_transcoder_number_jump_required_given_length_reach_point_form_d_0_origin_2d_plane_out-rwasm-bolero"
version = "1.0.1"
authors = ["generated-by-rwasm-1.0.1"]
edition = "2018"

[dependencies]
wasi-common = "0.20.0"
wiggle = "0.20.0"


            
[dev-dependencies]
bolero = "0.10.0"