
[package]
name = "go_transcoder_maximum_number_2x2_squares_can_fit_inside_right_isosceles_triangle_out-rwasm-proptest"
version = "1.0.1"
authors = ["generated-by-rwasm-1.0.1"]
edition = "2018"

[dependencies]
wasi-common = "0.20.0"
wiggle = "0.20.0"


            
[dev-dependencies]
proptest = "1.0.0"